apps/databases/zalando/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "postgres-operator-ui"
  labels:
    application: "postgres-operator-ui"

spec:
  ingressClassName: nginx
  rules:
  - host: dbs.k8s.localhost
    http:
      paths:
      - backend:
          service:
            name: postgres-operator-ui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dbs.k8s.localhost
    secretName: tls-secret
